Fix overflow wrap for long words.

--- a/res/themes/chalk.css
+++ b/res/themes/chalk.css
@@ -1,13 +1,9 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #1a1a1a;
-  color: #ddd;
-  margin: 0;
-  padding: 0;
-  display: flex;
+:root {
+  --embed-width: 250px;
+  --embed-height: 250px;
+  --sidebar-width: 300px;
 }
 
-
 body {
   font-family: Arial, sans-serif;
   background-color: #1a1a1a;
@@ -15,11 +11,14 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
+  scrollbar-gutter: stable both-edges;
+  overflow-wrap: break-word;
 }
 
 a {
   color: #64a5a6;
   text-decoration: none;
+  overflow-wrap: anywhere;
 }
 
 a:visited {
@@ -63,14 +62,21 @@ p {
 }
 
 .post, .post_reply {
+  flex: 1;
   background-color: #444;
   color: #ddd;
   display: inline-block;
-  word-wrap: break-word;
+  overflow-wrap: anywhere;
   padding: 10px;
   margin-bottom: 5px;
   margin-top: 5px;
   box-shadow: 0px 0px 0px 2px rgba(255, 255, 255, 0.2);
+  max-width: 100%;
+}
+
+.post a, .post_reply a {
+  overflow-wrap: anywhere;
+  max-width: 50%;
 }
 
 .post_reply {
@@ -78,23 +84,27 @@ p {
 }
 
 .wrapper {
+  display: flex;
 }
 
 .content {
-  margin: 15px; 
-  margin-right: 555px;
+/*  flex: 1;*/
+/*  width: calc(100vw - var(--sidebar-width);*/
+/*  max-width: calc(100vw - (var(--sidebar-width) + 20px));*/
+/*  width: 100%;*/
+  padding: 10px 20px;
   color: #ddd;
+  margin-right: calc(var(--sidebar-width) + 40px);
 }
 
 .sidebar {
-  width: 500px;
+  width: var(--sidebar-width);
   padding: 20px;
   background-color: #444;
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
-  overflow: auto;
 }
 
 .sidebar-header {
@@ -119,12 +129,6 @@ p {
   margin-bottom: 5px;
   border: none;
   box-shadow: 0px 0px 0px 2px rgba(255, 255, 255, 0.2);
-}
-
-.control-panel select, .control-panel select option {
-  color: #ddd;
-  background-color: #444;
-  max-width: 150px;
 }
 
 .post-form textarea, .config-form textarea {
@@ -159,13 +163,12 @@ p {
 .post-header {
   margin-top: 0px;
   margin-bottom: 5px;
-
 }
 
 .subject {
   color: #4fc3f7;
   margin-right: 5px;
-  word-wrap: break-word;
+  overflow-wrap: anywhere;
 }
 
 .name {
@@ -198,7 +201,7 @@ p {
 
 .message {
   white-space: pre-wrap;
-  word-wrap: break-word;
+  overflow-wrap: anywhere;
   margin-top: 0px;
   margin-bottom: 0px;
   color: #ddd;
@@ -216,13 +219,11 @@ p {
   color: #a095f1;
 }
 
-
 .message-quote {
   margin-top: 0px;
   margin-bottom: 0px;
   color: #4dd0e1;
 }
-
 
 .email {
   color: #9575cd;
@@ -264,6 +265,14 @@ p {
   background-color: #666;
   margin-bottom: 5px;
   margin-top: 5px;
+/*  flex-grow: 1;*/
+/*  width: calc(100% - var(--sidebar-width));*/
+/*  flex-grow: 1;*/
+/*  margin-right: calc(100% - var(--sidebar-width) + 0px);*/
+/*  width: calc(200% + 0px);*/
+/*  position: fixed;*/
+  left: 0;
+  margin-left: 0;
 }
 
 .embedded-files, .embedded-nothing {
@@ -275,39 +284,41 @@ p {
 
 .embedded-file {
   flex: 0 0 auto;
-  margin-right: 10px;
+  margin-right: 0px;
   margin-bottom: 0px;
 }
 
 .embedded-nothing {
   margin-bottom: 0px;
-  margin-top: 0px
+  margin-top: 0px;
 }
 
 .embedded-info {
-  word-wrap: break-word;
-  max-width: 250px;
+  overflow-wrap: anywhere;
+  max-width: var(--embed-width);
   margin-bottom: 5px;
-  margin-top: 0px
+  margin-top: 0px;
 }
 
 .embedded-video {
-  max-width: 250px;
-  max-height: 250px;
+  max-width: var(--embed-width);
+  max-height: var(--embed-width);
   margin-right: 10px;
   margin-bottom: 0px;
 }
 
 .embedded-image {
-  max-width: 250px;
-  max-height: 250px;
+  max-width: var(--embed-width);
+  max-height: var(--embed-width);
   margin-top: 0px;
   cursor: pointer;
 }
 
 .embedded-image.expanded {
-  max-width: 100%;
+/*  max-width: calc(100vw - (var(--sidebar-width)+100px));*/
+  max-width: calc(100vw - var(--sidebar-width) - 120px);
   max-height: 100%;
+/*  margin-right: 500px;*/
 }
 
 .post.deletion-mode:hover::after, .post_reply.deletion-mode:hover::after, .embedded-file.deletion-mode:hover::after {
@@ -332,7 +343,8 @@ p {
 }
 
 .watched-boards {
-  word-wrap: : break-word;
+  overflow-wrap: anywhere;
+  width: 100%;
 }
 
 .watched-board {
@@ -351,7 +363,7 @@ p {
 }
 
 .clientid {
-  word-wrap: break-word;
+  overflow-wrap: anywhere;
 }
 
 .file-icon, .file-not-found-icon {
