--- a/res/themes/photon dark.css
+++ b/res/themes/photon dark.css
@@ -10,6 +10,7 @@ body {
 a {
   color: #FF6600;
   text-decoration: none;
+  overflow-wrap: anywhere;
 }
 
 a:visited {
@@ -55,7 +56,7 @@ p {
 .post, .post_reply {
   background-color: #192734;
   color: #CCCCCB;
-  word-wrap: break-word;
+  overflow-wrap: anywhere;
   display: inline-block;
   padding: 10px;
   margin-bottom: 5px;
@@ -181,7 +182,7 @@ p {
 
 .message {
   white-space: pre-wrap;
-  word-wrap: break-word;
+  overflow-wrap: anywhere;
   margin-top: 0px;
   margin-bottom: 0px;
 }
@@ -265,7 +266,7 @@ p {
 }
 
 .embedded-info {
-  word-wrap: break-word;
+  overflow-wrap: anywhere;
   max-width: 250px;
   margin-bottom: 5px;
   margin-top: 0px
@@ -321,7 +322,7 @@ p {
 }
 
 .clientid {
-  word-wrap: break-word;
+  overflow-wrap: anywhere;
   color: #CCCCCB;
 }
 
